# future-finance-labs

./: .gitignore  Cargo.toml  README.md  cli.yml
cli/: Cargo.toml  cli.yml
cli/src/: main.rs
src/: main.rs
src/aggregates/: mod.rs
src/api_interface/: mod.rs
src/formatting/: mod.rs
utils/: Cargo.toml
utils/benches/: bench.rs
utils/src/: lib.rs
utils/src/api_interface/: mod.rs
utils/src/formatting/: mod.rs
