[package]
name = "ffl"
version = "0.1.0"
authors = ["Justin Hale"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yahoo_finance_api = { version = "1.0", features = ["blocking"] }
tokio = "0.3.5" 
chrono = "0.4.19" 
reqwest = "0.10.9"
serde = "1.0.118"
serde_json = "1.0.60"
tokio-compat-02 = "0.1.2"
tokio-test = "0.3.0"
clap = "2.33.3"
xactor = "0.7.9"
async-trait = "0.1.42"

[dev-dependencies]
clap = {version = "2.33.3", features = ["yaml"]}
