[package]
name = "ffl-utils"
version = "0.1.0"
authors = ["Justin Hale <haleleonj@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yahoo_finance_api = "1.1.3"
tokio = "0.3.5" 
chrono = "0.4.19" 
reqwest = "0.10.9"
serde = "1.0.118"
serde_json = "1.0.60"
tokio-compat-02 = "0.1.2"
tokio-test = "0.3.0"
async-trait = "0.1.42"
futures = "0.3.8"
criterion = "0.3.3"
rand = "0.7.3"

[[bench]]
name = "bench"
harness = false

[build]
target = "x86_64-pc-windows-msvc"
